# mech-tool-deployment

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build_and_push.sh  mypy.ini  pyproject.toml
.github/workflows/: python_ci.yaml
mech_tool_deployment/: api_keys.py  run_agent.py  utils.py
mech_tool_deployment/agents/mech_agent/: deploy.py
tests/: test_mech_local.py
